--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -26,9 +26,45 @@ h3 {
   background-color: rgba(108, 85, 19, 0.5);
   border-color: #6c5513; }
 
+.btn-edit {
+  color: white;
+  border-color: black;
+  background-color: #132b6c;
+  position: relative;
+  /* on hover we animate the width to
+   * 100% and opacity to 0 so the element
+   * grows and fades out
+   */ }
+  .btn-edit:hover, .btn-edit:focus {
+    color: white; }
+  .btn-edit:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+    transition: none; }
+  .btn-edit:hover:after {
+    width: 120%;
+    background-color: rgba(255, 255, 255, 0);
+    -webkit-transition: all 0.4s ease-out;
+    -moz-transition: all 0.4s ease-out;
+    -ms-transition: all 0.4s ease-out;
+    -o-transition: all 0.4s ease-out;
+    transition: all 0.4s ease-out; }
+
 table.item-listing {
   width: 100%; }
-  table.item-listing thead {
+  table.item-listing.editable {
+    border-collapse: separate;
+    border-spacing: 5px; }
+  table.item-listing thead td.title {
     font-size: 2.5em;
     font-family: "Open Sans", "Helvetica", sans-serif; }
   table.item-listing tbody th {
@@ -39,5 +75,10 @@ table.item-listing {
     background-color: #eee; }
   table.item-listing tbody tr td.number {
     text-align: right; }
+  table.item-listing tbody tr td[contenteditable="true"] {
+    border: 1px solid #aeaeae;
+    border-radius: 6px;
+    padding-top: 5px;
+    padding-bottom: 5px; }
 
 /*# sourceMappingURL=custom.css.map */
